# tokencheck-backend

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .project  Cargo.toml  Dockerfile  README-server.md  README.md  README.shield-server  contracts.toml  convert_evn_to_yaml.sh  docker-compose.yml  env.example  env.yaml
.github/workflows/: deploy-to-cloud-run.yml  deploy-to-k8.yml  rust.yml
.sqlx/: query-14e2e4765bfe8d7bb63186fa5f9879e32df9077123c812834da3b10ae10100d8.json  query-321f5afc59801677c85924346315fcefe75d2aff294a9709585ac8b3e687fed8.json  query-36f141e4fb3c7abf44934ca6e807a4d02f0388649b78eb9fb9c0d7f2f24391b5.json  query-4651740f14b7bcd24bc971874d25b976e2a6a35c33323ee2cfb7d5dd635d26b0.json  query-4e204e683cb4f435ee32a599df4affbad04a6b7f8d93bbfc6fe24433e602a53d.json  query-74ac976a691f3df98bc0a75c28ac5cb8b4549ad9a9a5aed6bc72532d624a3a8b.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8742140bc714b7a3bec259c85d3c94394c263aa66046858a5493c916fec84c36.json  query-90df7aa5e075ee160fd73b124f97c15b7bfd94ac4821c5c7706e4574ef3b762e.json  query-9454fdacc51a9849a11cb9106ce5c0e716ff4d250be1ae14a994c7e90c2fc6c8.json  query-a2659bcb3c614499b9c2648d208afbddf5db0cbb04efb216bae17dde2166e9c9.json  query-b43fad89b61b53c395d38dd1e36189f84e5d85bea8ed6bec3acee108996a0dbb.json  query-b7cd6a3fb2c8189314c607bb9cc9dabfb78cf0eac03f36fa018ff1637ac227f8.json  query-c387e4a90363801652c364d3ec2642b2d64bbea8d454557090726130eae3335f.json  query-c8cff01bbaa4cee093eac2652e60782fc15bf4f76cfc8d080ccd3e2106a9fc32.json  query-cd0f513c76cf4e9334d252ea9ca0e839b38ef072127d5bdcd5a80b07c23b3b82.json  query-e0959826e19da248145f8dda348d9b6095a644cf47761ccd3b4c7a4ee1aa3328.json  query-f1704755151dfff64f4b9bbd7416cf2f33a3a2705f5399508547b3917361bf66.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
k8s/: backend-ingress.yaml  backend-managed-certificate.yaml  frontend-config.yaml  ingress.yaml  managed-certificate.yaml  tokencheck-backend-deployment.yaml  tokencheck-backend-service.yaml
migrations/: 20250306135724_init.down.sql  20250306135724_init.sql  20250314085308_api.sql
src/: app_config.rs  config.rs  env_config.rs  lib.rs  main.rs  models.rs
src/abi/: chainlink_aggregator.rs  erc20.rs  uniswap_factory_v2.rs  uniswap_pair.rs  uniswap_pool.rs  uniswap_quoter.rs  uniswap_router_v2.rs  uniswap_v3_factory.rs  uniswap_v3_router.rs
src/chainlink/: chainlink_data.rs  chainlink_feed_map.rs
src/data/: chain_data.rs  contracts.rs  dex.rs  provider_manager.rs  token_checklist_cache.rs  token_data.rs  token_score_cache.rs
src/dex/: dex_data.rs
src/dtos/: auth.rs  log.rs  oauth.rs  sub.rs  user.rs
src/events/: dex_liquidity.rs  shared.rs  uniswap.rs  uniswap_v2.rs  uniswap_v3.rs
src/middlewares/: auth.rs  logger.rs
src/misc/: mod.rs
src/models/: auth.rs  mod.rs
src/repo/: log.rs  mod.rs  sub.rs  user.rs
src/routes/: auth.rs  item.rs  log.rs  mod.rs  report.rs  sub.rs  subs.rs  user.rs
src/server/: config.rs  mod.rs
src/services/: auth.rs  item.rs  log.rs  mod.rs  report.rs  sub.rs  subs.rs  user.rs
src/shield-server/: database.rs
src/shield_server/: database.rs  db_logger.rs  db_models.rs  models.rs
src/token_check/: check_token_lock.rs  main_token_check.rs  token_checklist.rs  token_holder_check.rs  token_liquidity_check.rs  token_methods.rs  token_score.rs
src/utils/: logging.rs  (+4 more)
tests/: api.rs  checklist.rs  get_pairs.rs  openai_api.rs  scrapper.rs  token_check.rs
(+60 files in other folders)
