[package]
name = "chainshield-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0.14", features = ["ws", "eip712"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.43.0", features = ["full", "macros"] }
log = "0.4"
anyhow = "1.0.87"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.12.11", features = ["json"] }
async-trait = "0.1.79"
colored = "2.0.0"
rust_decimal = "1.36.0"
fern = "0.6.1"
scraper = "0.21.0"
serde_json = "1.0.139"
chrono = { version = "0.4.30", features = ["serde"] }
rand = "0.8.5"
once_cell = "1.8"
toml = "0.8.19"
actix-web = "4.9.0"
dotenvy = "0.15.7"
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
