[package]
name = "tokencheck-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0.14", features = ["ws", "eip712"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.44.0", features = ["full", "macros"] }
log = "0.4.26"
anyhow = "1.0.87"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.11", features = ["json"] }
async-trait = "0.1.79"
rust_decimal = "1.36.0"
scraper = "0.21.0"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.8.5"
once_cell = "1.8"
toml = "0.8.19"
actix-web = { version = "4.10.2", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.7.1"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "bigdecimal",
  "ipnetwork",
  "json",
] }
argon2 = "0.5.3"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
colored = "3.0.0"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1.2"
oauth2 = "5.0.0"
thiserror = "2.0.12"
fern = { version = "0.7.1", features = ["colored"] }
